# Pseudo-Physical-Input

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.cache  config.status  configure  configure.in  libtool
ctlpanel/: Makefile  Makefile.am  Makefile.in  ctlpanel.c  ctlpanel.h  logo.xpm  mainwindow.c  mainwindow.h
ctlpanel/.deps/: ctlpanel.P  (+1 more)
doc/: Carpal Tunnel Syndrome.doc  Control Panel.wpd  PPI - Glossary.doc  PPI - Glove Interface.doc  PPI - Inner Working.wpd  PPI - Judges Manual.doc  PPI - Operation Online - Early Price List.doc  PPI - Operation Online Proposal - Part 1.doc  PPI - Operation Online Proposal - Part 2.doc  PPI - Outline.wpd  PPI - Serial Communication Interface.doc  PPI - Serial Communications Interface.doc  PPI - Table of Contents.doc  Procedure and Conclusion.doc  Pseudo Acquaint.wpd  bevel-logo.xpm  hierarchy.dia  info.xcf  small-logo.xpm
driver/: ppi_signlanguage_drv.c
gtkppi/: Makefile  Makefile.am  Makefile.in  gtkppi.h  gtkppiabout.c  gtkppiabout.h  gtkppiconfig.c  gtkppiconfig.h  gtkppifintaxedit.c  gtkppifintaxedit.h  gtkppifintaxlist.c  gtkppifintaxlist.h  gtkppifintaxview.c  gtkppifintaxview.h  gtkppigeneral.c  gtkppigeneral.h  gtkppikeyboard.c  gtkppikeyboard.h  gtkppimouse.c  gtkppimouse.h  gtkppisignlanguage.c  gtkppisignlanguage.h  gtkppixmlconfigfile.c  parserc.c  parserc.h
gtkppi/.deps/: gtkppiabout.P  gtkppiconfig.P  gtkppifintaxlist.P  gtkppifintaxview.P  gtkppigeneral.P  gtkppikeyboard.P  gtkppimouse.P  gtkppisignlanguage.P
microctrl/: Intel8051.s  PIC16C77.asm  PIC16C77.s
ppi/: 3d.h  Makefile  Makefile.am  Makefile.in  ppi.c  ppi.h  ppikeyboard.c  ppikeyboard.h  ppimouse.c  ppimouse.h  ppisignlanguage.c  ppisignlanguage.h
ppi/.deps/: ppi.P  ppikeyboard.P  ppimouse.P  ppisignlanguage.P
ppi/xpm/: about.xpm
(+1 files in other folders)
