dnl Process this file with autoconf to produce a configure script.

AC_INIT(ppi/ppi.h)

VERSION=0.0.1
PACKAGE=ppi
PPI_LIBRARY_VERSION=0:1:0

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AC_SUBST(PPI_LIBRARY_VERSION)

AC_PROG_CC
AM_PROG_LIBTOOL

AM_PATH_GTK(1.2.2, [LIBS="$LIBS $GTK_LIBS"
	CFLAGS="$CFLAGS $GTK_CFLAGS"
	AC_DEFINE_UNQUOTED(CONFIG_GTK_MAJOR, $gtk_config_major_version)
	AC_DEFINE_UNQUOTED(CONFIG_GTK_MINOR, $gtk_config_minor_version)],
	AC_MSG_ERROR(Need GTK+ 1.2.0 or better!))

AC_OUTPUT(Makefile
          ctlpanel/Makefile
	  ppi/Makefile
	  gtkppi/Makefile)
